--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "RootLayout": {
-    "home_link": "Home",
+    "home_link": "Home"
     //"about_link": "About",
     //"guestbook_link": "Guestbook",
     //"portfolio_link": "Portfolio",
